# flutter_mimc

./: .gitignore  .metadata  CHANGELOG.md  README.md  THIRD_PARTY_SDKS.md  pubspec.yaml
android/: build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/xiaomi/mimc/flutter_mimc/: FlutterMimcPlugin.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/flutter_mimc_example/: MainActivity.kt
example/backend/fastadmin/: .env.example
example/backend/fastadmin/addons/mimcbridge/controller/api/: Mimc.php
example/backend/php/: .env.example
example/backend/php/public/: index.php
example/backend/php/src/: MimcTokenService.php
example/integration_test/: live_mimc_integration_test.dart  plugin_integration_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart  mimc_test_config.dart  mimc_token_client.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/macos/RunnerTests/: RunnerTests.swift
example/test/: widget_test.dart
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: flutter_mimc.podspec
ios/Classes/: FlutterMimcPlugin.h  FlutterMimcPlugin.mm
lib/: flutter_mimc.dart  flutter_mimc_method_channel.dart  flutter_mimc_platform_interface.dart  flutter_mimc_web.dart
lib/src/: mimc_exception.dart  platform_registration.dart  platform_registration_io.dart  platform_registration_stub.dart
lib/src/desktop/: flutter_mimc_ffi.dart
lib/src/model/: mimc_capability.dart  mimc_config.dart  mimc_connection_state.dart  mimc_event.dart  mimc_message.dart  mimc_rts.dart  mimc_server_ack.dart
linux/: CMakeLists.txt
macos/: flutter_mimc.podspec
macos/Classes/: flutter_mimc_bridge.cpp
src/: CMakeLists.txt  flutter_mimc_bridge.cpp  flutter_mimc_bridge.h  mimc_sdk_c_api.h
test/: flutter_mimc_test.dart
test/native/: bridge_test.cpp  mock_mimc_sdk.cpp  portable_crypto_test.cpp  sdk_smoke_test.cpp
tool/: build_desktop_sdk.sh  run_live_e2e.sh  run_php_token_server.sh  test_native_bridge.sh
tool/desktop_sdk/: CMakeLists.txt  mimc-portable-crypto.patch  portable_crypto.cpp  portable_crypto.h  vcpkg.json
windows/: CMakeLists.txt
